# bn-lens

./: .gitignore  .herd-prompt.md  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN_BN_INTERFACE.md  LOOP_PROMPT.md  README.md  TODO.md  herdr-plugin.toml
src/: app.rs  bn.rs  bnsock.rs  cfg.rs  classes.rs  ctx.rs  datamap.rs  decomp.rs  exports.rs  help.rs  herdr.rs  imports.rs  launch.rs  main.rs  marks.rs  menu.rs  picker.rs  strings.rs  switch.rs  syntax.rs  target_menu.rs  theme.rs  types.rs  ui.rs  usage.rs  viewer.rs
src/viewer/: actions.rs  hotspots.rs  input.rs  render.rs  stack.rs
