[package]
name = "bn-lens"
version = "1.5.0"
edition = "2021"
description = "A headless Binary Ninja navigator TUI that pair-programs with agents, as a herdr plugin."

[[bin]]
name = "bn-lens"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
lto = true
strip = true
